[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/chars/fHero_ [elf].png" type="Texture" id=1]
[ext_resource path="res://src/actor.gd" type="Script" id=2]
[ext_resource path="res://src/state/state_machine.gd" type="Script" id=3]
[ext_resource path="res://src/state/idle.gd" type="Script" id=4]
[ext_resource path="res://src/state/move.gd" type="Script" id=5]
[ext_resource path="res://src/state/chop.gd" type="Script" id=6]
[ext_resource path="res://src/state/build.gd" type="Script" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 2.0

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="Position2D"]
texture = ExtResource( 1 )
hframes = 8
vframes = 6

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="move" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="chop" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="build" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="StateMachine/build"]
one_shot = true

[node name="HungerTimer" type="Timer" parent="."]
wait_time = 15.0

[connection signal="timeout" from="HungerTimer" to="." method="_on_HungerTimer_timeout"]
